[gd_scene load_steps=2 format=3 uid="uid://4hfx7irf01xf"]

[ext_resource type="Script" path="res://layout.gd" id="1_d44nq"]

[node name="TallLayout" type="Control"]
custom_minimum_size = Vector2(648, 1152)
layout_mode = 3
anchors_preset = 0
offset_right = 648.0
offset_bottom = 1152.0
script = ExtResource("1_d44nq")

[node name="ColorRect1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 192.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 192.0

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 64.0
offset_right = 576.0
offset_bottom = 192.0

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0, 1, 1, 1)
border_width = 5.0
editor_only = false
